--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "garden_plant",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.2.0",
     "bootstrap": "^4.3.1"
   },
-  "devDependencies": {
-    "webpack-dev-server": "^3.9.0"
-  }
+  "devDependencies": {}
 }
